package Spore;
import Effect.*;
abstract class Spore {
    int nutrition;
    Effect effect;

    public abstract Effect getEffect();
}
